@@ -16,7 +16,7 @@ if ENABLE_SPDY
 spdyex = \
   spdy_event_loop \
   spdy_fileserver \
-  spdy_response_with_callback 
+  spdy_response_with_callback
 
 if HAVE_SPDYLAY
 spdyex += mhd2spdy
@@ -28,6 +28,7 @@ endif
 noinst_PROGRAMS = \
  benchmark \
  benchmark_https \
+ chunked_example \
  minimal_example \
  dual_stack_example \
  minimal_example_comet \
@@ -40,7 +41,7 @@ noinst_PROGRAMS = \
 
 
 if ENABLE_HTTPS
-noinst_PROGRAMS += https_fileserver_example 
+noinst_PROGRAMS += https_fileserver_example
 endif
 if HAVE_POSTPROCESSOR
 noinst_PROGRAMS += \
@@ -53,12 +54,12 @@ endif
 
 if ENABLE_DAUTH
 noinst_PROGRAMS += \
- digest_auth_example 
+ digest_auth_example
 endif
 
 if ENABLE_BAUTH
 noinst_PROGRAMS += \
- authorization_example 
+ authorization_example
 endif
 
 if HAVE_W32
@@ -66,9 +67,14 @@ AM_CFLAGS += -DWINDOWS
 endif
 
 minimal_example_SOURCES = \
- minimal_example.c 
+ minimal_example.c
 minimal_example_LDADD = \
- $(top_builddir)/src/microhttpd/libmicrohttpd.la 
+ $(top_builddir)/src/microhttpd/libmicrohttpd.la
+
+chunked_example_SOURCES = \
+ chunked_example.c
+chunked_example_LDADD = \
+ $(top_builddir)/src/microhttpd/libmicrohttpd.la
 
 demo_SOURCES = \
  demo.c
@@ -90,68 +96,68 @@ mhd2spdy_LDADD = \
  -lssl -lcrypto -lspdylay
 
 benchmark_SOURCES = \
- benchmark.c 
+ benchmark.c
 benchmark_CPPFLAGS = \
  $(AM_CPPFLAGS) $(CPU_COUNT_DEF)
 benchmark_LDADD = \
- $(top_builddir)/src/microhttpd/libmicrohttpd.la  
+ $(top_builddir)/src/microhttpd/libmicrohttpd.la
 
 benchmark_https_SOURCES = \
- benchmark_https.c 
+ benchmark_https.c
 benchmark_https_CPPFLAGS = \
  $(AM_CPPFLAGS) $(CPU_COUNT_DEF)
 benchmark_https_LDADD = \
- $(top_builddir)/src/microhttpd/libmicrohttpd.la  
+ $(top_builddir)/src/microhttpd/libmicrohttpd.la
 
 dual_stack_example_SOURCES = \
- dual_stack_example.c 
+ dual_stack_example.c
 dual_stack_example_LDADD = \
- $(top_builddir)/src/microhttpd/libmicrohttpd.la 
+ $(top_builddir)/src/microhttpd/libmicrohttpd.la
 
 post_example_SOURCES = \
- post_example.c 
+ post_example.c
 post_example_LDADD = \
  $(top_builddir)/src/microhttpd/libmicrohttpd.la
 
 minimal_example_comet_SOURCES = \
- minimal_example_comet.c 
+ minimal_example_comet.c
 minimal_example_comet_LDADD = \
- $(top_builddir)/src/microhttpd/libmicrohttpd.la 
+ $(top_builddir)/src/microhttpd/libmicrohttpd.la
 
 authorization_example_SOURCES = \
- authorization_example.c 
+ authorization_example.c
 authorization_example_LDADD = \
- $(top_builddir)/src/microhttpd/libmicrohttpd.la 
+ $(top_builddir)/src/microhttpd/libmicrohttpd.la
 
 digest_auth_example_SOURCES = \
- digest_auth_example.c 
+ digest_auth_example.c
 digest_auth_example_LDADD = \
- $(top_builddir)/src/microhttpd/libmicrohttpd.la 
+ $(top_builddir)/src/microhttpd/libmicrohttpd.la
 
 refuse_post_example_SOURCES = \
- refuse_post_example.c 
+ refuse_post_example.c
 refuse_post_example_LDADD = \
- $(top_builddir)/src/microhttpd/libmicrohttpd.la 
+ $(top_builddir)/src/microhttpd/libmicrohttpd.la
 
 querystring_example_SOURCES = \
- querystring_example.c 
+ querystring_example.c
 querystring_example_LDADD = \
- $(top_builddir)/src/microhttpd/libmicrohttpd.la 
+ $(top_builddir)/src/microhttpd/libmicrohttpd.la
 
 fileserver_example_SOURCES = \
- fileserver_example.c 
+ fileserver_example.c
 fileserver_example_LDADD = \
- $(top_builddir)/src/microhttpd/libmicrohttpd.la 
+ $(top_builddir)/src/microhttpd/libmicrohttpd.la
 
 fileserver_example_dirs_SOURCES = \
- fileserver_example_dirs.c 
+ fileserver_example_dirs.c
 fileserver_example_dirs_LDADD = \
- $(top_builddir)/src/microhttpd/libmicrohttpd.la 
+ $(top_builddir)/src/microhttpd/libmicrohttpd.la
 
 fileserver_example_external_select_SOURCES = \
- fileserver_example_external_select.c 
+ fileserver_example_external_select.c
 fileserver_example_external_select_LDADD = \
- $(top_builddir)/src/microhttpd/libmicrohttpd.la 
+ $(top_builddir)/src/microhttpd/libmicrohttpd.la
 
 https_fileserver_example_SOURCES = \
 https_fileserver_example.c
@@ -162,19 +168,19 @@ https_fileserver_example_LDADD = \
 
 
 spdy_event_loop_SOURCES = \
- spdy_event_loop.c 
+ spdy_event_loop.c
 spdy_event_loop_LDADD = \
   $(top_builddir)/src/microspdy/libmicrospdy.la \
  -lz
 
 spdy_fileserver_SOURCES = \
- spdy_fileserver.c 
+ spdy_fileserver.c
 spdy_fileserver_LDADD = \
   $(top_builddir)/src/microspdy/libmicrospdy.la \
  -lz
 
 spdy_response_with_callback_SOURCES = \
- spdy_response_with_callback.c 
+ spdy_response_with_callback.c
 spdy_response_with_callback_LDADD = \
   $(top_builddir)/src/microspdy/libmicrospdy.la \
  -lz
